--- a/index.html
+++ b/index.html
@@ -1,9 +1,42 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <title>Google Pixel 2 bemutató - Főoldal</title>
     </head>
     <body>
-        Hello GitHub Pages World!
+        <nav>
+            <a href="index.html" >Főoldal</a>
+            <a href="buds.html" >Pixel Buds</a>
+            <a href="home.html" >Home Mini / Max</a>
+            <a href="clips.html" >Clips</a>
+            <a href="book.html" >Pixelbook</a>
+            <a href="pixel2.html" >Pixerl 2 / Pixel 2 XL</a>
+            <a href="contact.html" >Kapcsolat</a>
+        </nav>
+        
+        <section id="img-grid">
+            <div class="container">
+              <div class="row">
+                <div class="col col-md-6">
+                  1 of 2
+                </div>
+                <div class="col col-md-6">
+                  1 of 2
+                </div>
+              </div>
+              <div class="row">
+                <div class="col col-md-4">
+                  1 of 3
+                </div>
+                <div class="col col-md-4">
+                  1 of 3
+                </div>
+                <div class="col col-md-4">
+                  1 of 3
+                </div>
+              </div>
+            </div>
+        </section>
     </body>
 </html>
-
