Add style.css and buds.html

--- a/buds.html
+++ b/buds.html
@@ -1,17 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu">
     <head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/style.css">
         <title>Google Pixel 2 bemutató - Pixel Buds</title>
     </head>
     <body>
         <nav>
-            <a href="index.html" >Főoldal</a>
-            <a href="buds.html" >Pixel Buds</a>
-            <a href="home.html" >Home Mini / Max</a>
-            <a href="clips.html" >Clips</a>
-            <a href="book.html" >Pixelbook</a>
-            <a href="pixel2.html" >Pixerl 2 / Pixel 2 XL</a>
-            <a href="contact.html" >Kapcsolat</a>
+            <ul class="nav nav-pills">
+                <li><a href="index.html" >Főoldal</a></li>
+                <li class="active"><a href="buds.html">Pixel Buds</a></li>
+                <li><a href="home.html" >Home Mini / Max</a></li>
+                <li><a href="clips.html" >Clips</a></li>
+                <li><a href="book.html" >Pixelbook</a></li>
+                <li><a href="pixel2.html" >Pixel 2 / Pixel 2 XL</a></li>
+                <li><a href="contact.html" >Kapcsolat</a></li>
+            </ul>
         </nav>
+        <article>
+            <h1 class="display-1">Pixel Buds</h1>
+            <figure id="pic1">
+                <img src="media/buds1_sm.jpg" alt="Google Pixel Buds fülhallgató" height="200">
+                <figcaption>
+                    Google Pixel Buds fülhallgató
+                </figcaption>
+            </figure>
+            <p>A Google 2017-es hardveres eseményének egyik meglepetése a Bluetooth-os <a href="https://store.google.com/us/product/google_pixel_buds?hl=en-US"> Pixel Buds </a> nevű fülhallgató volt, ami a Google szerint: “felszabadítja a felhasználó kezét”.</p>
+            <p>A kényelemnél viszont fontosabb, hogy a fülhallgató 40 különböző nyelvet ismer, és valós időben fordítja, amit a felhasználó mond.</p>
+            <p>Az esemény színpadán egy társalgással demonstrálták, hogyan fordít a kütyü angolról svédre valós időben, persze a mondatok befejezése után 1-2 másodperces csúszással számolni kell. Az eszközre nem kell közvetlenül semmilyen nyelvi csomagot telepíteni, interneten keresztül zajlik a folyamat, és természetesen mindennek alapja egy minimum 5.0-ás Lollipopot futtató androidos, vagy iOS 10.0-ás telefon, de a Google Assistant használatához már Marshmallow szükséges.</p>
+            <figure id="pic2">
+                <img src="media/buds2_sm.jpg" alt="Google Pixel Buds tokban" height="200">
+                <figcaption>
+                    Google Pixel Buds tokban
+                </figcaption>
+            </figure>
+            <p>A füles jobb felébe épített érintőfelületre tapintva lehet előhívni a Google Assistantot, ami számos feladat elvégzésében segít. Parancsba adható neki, hogy indítsa/szüneteltesse a zenelejátszást, tervezzen útvonalat és navigáljon, vagy indítson el egy hívást. Kézmozdulatokkal pedig olyan alapvető funkciókat végezhetünk el, mint egy dal szüneteltetése, a hangerő szabályzása, vagy hívásokra való válaszolás.</p>
+            <p>A kiegészítő novembertől vásárolható 159 dollárért (42 ezerforint) fekete, fehér, kék színekben. Az amerikai start után az Egyesült Királyságban, majd Ausztráliában, Kanadában, Németországban és a Szingapúrban lesz megvásárolható.</p>
+        </article>
+            <video controls>
+                <source src="media/buds.mp4" type="video/mp4">
+                Az ön böngészője nem támogatja a html5 videolejátszást.
+            </video>
     </body>
 </html>
