--- a/home.html
+++ b/home.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu">
     <head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/style.css">
         <title>Google Pixel 2 bemutató - Home Mini / Max</title>
     </head>
     <body>
         <nav>
-            <a href="index.html" >Főoldal</a>
-            <a href="buds.html" >Pixel Buds</a>
-            <a href="home.html" >Home Mini / Max</a>
-            <a href="clips.html" >Clips</a>
-            <a href="book.html" >Pixelbook</a>
-            <a href="pixel2.html" >Pixerl 2 / Pixel 2 XL</a>
-            <a href="contact.html" >Kapcsolat</a>
+            <ul class="nav nav-pills">
+                <li><a href="index.html" >Főoldal</a></li>
+                <li><a href="buds.html">Pixel Buds</a></li>
+                <li class="active"><a href="home.html" >Home Mini / Max</a></li>
+                <li><a href="clips.html" >Clips</a></li>
+                <li><a href="book.html" >Pixelbook</a></li>
+                <li><a href="pixel2.html" >Pixel 2 / Pixel 2 XL</a></li>
+                <li><a href="contact.html" >Kapcsolat</a></li>
+            </ul>
         </nav>
     </body>
 </html>
