--- a/buds.html
+++ b/buds.html
@@ -22,7 +22,8 @@
             <figure id="pic1">
                 <img src="media/buds1_sm.jpg" alt="Google Pixel Buds fülhallgató" height="200">
                 <figcaption>
-                    Google Pixel Buds fülhallgató
+                    Google Pixel Buds fülhallgató <br>
+                    <a href="media/buds1.jpg">Nagyobb méretű kép</a>
                 </figcaption>
             </figure>
             <p>A Google 2017-es hardveres eseményének egyik meglepetése a Bluetooth-os <a href="https://store.google.com/us/product/google_pixel_buds?hl=en-US"> Pixel Buds </a> nevű fülhallgató volt, ami a Google szerint: “felszabadítja a felhasználó kezét”.</p>
@@ -31,7 +32,8 @@
             <figure id="pic2">
                 <img src="media/buds2_sm.jpg" alt="Google Pixel Buds tokban" height="200">
                 <figcaption>
-                    Google Pixel Buds tokban
+                    Google Pixel Buds tokban <br>
+                    <a href="media/buds1.jpg">Nagyobb méretű kép</a>
                 </figcaption>
             </figure>
             <p>A füles jobb felébe épített érintőfelületre tapintva lehet előhívni a Google Assistantot, ami számos feladat elvégzésében segít. Parancsba adható neki, hogy indítsa/szüneteltesse a zenelejátszást, tervezzen útvonalat és navigáljon, vagy indítson el egy hívást. Kézmozdulatokkal pedig olyan alapvető funkciókat végezhetünk el, mint egy dal szüneteltetése, a hangerő szabályzása, vagy hívásokra való válaszolás.</p>
