--- a/home.html
+++ b/home.html
@@ -17,5 +17,31 @@
                 <li><a href="contact.html" >Kapcsolat</a></li>
             </ul>
         </nav>
+        <article>
+            <h1 class="display-1">Pixel Buds</h1>
+            <figure id="pic1">
+                <img src="media/buds1_sm.jpg" alt="Google Pixel Buds fülhallgató" height="200">
+                <figcaption>
+                    Google Pixel Buds fülhallgató <br>
+                    <a href="media/buds1.jpg">Nagyobb méretű kép</a>
+                </figcaption>
+            </figure>
+            <p>A Google 2017-es hardveres eseményének egyik meglepetése a Bluetooth-os <a href="https://store.google.com/us/product/google_pixel_buds?hl=en-US"> Pixel Buds </a> nevű fülhallgató volt, ami a Google szerint: “felszabadítja a felhasználó kezét”.</p>
+            <p>A kényelemnél viszont fontosabb, hogy a fülhallgató 40 különböző nyelvet ismer, és valós időben fordítja, amit a felhasználó mond.</p>
+            <p>Az esemény színpadán egy társalgással demonstrálták, hogyan fordít a kütyü angolról svédre valós időben, persze a mondatok befejezése után 1-2 másodperces csúszással számolni kell. Az eszközre nem kell közvetlenül semmilyen nyelvi csomagot telepíteni, interneten keresztül zajlik a folyamat, és természetesen mindennek alapja egy minimum 5.0-ás Lollipopot futtató androidos, vagy iOS 10.0-ás telefon, de a Google Assistant használatához már Marshmallow szükséges.</p>
+            <figure id="pic2">
+                <img src="media/buds2_sm.jpg" alt="Google Pixel Buds tokban" height="200">
+                <figcaption>
+                    Google Pixel Buds tokban <br>
+                    <a href="media/buds1.jpg">Nagyobb méretű kép</a>
+                </figcaption>
+            </figure>
+            <p>A füles jobb felébe épített érintőfelületre tapintva lehet előhívni a Google Assistantot, ami számos feladat elvégzésében segít. Parancsba adható neki, hogy indítsa/szüneteltesse a zenelejátszást, tervezzen útvonalat és navigáljon, vagy indítson el egy hívást. Kézmozdulatokkal pedig olyan alapvető funkciókat végezhetünk el, mint egy dal szüneteltetése, a hangerő szabályzása, vagy hívásokra való válaszolás.</p>
+            <p>A kiegészítő novembertől vásárolható 159 dollárért (42 ezerforint) fekete, fehér, kék színekben. Az amerikai start után az Egyesült Királyságban, majd Ausztráliában, Kanadában, Németországban és a Szingapúrban lesz megvásárolható.</p>
+        </article>
+            <video controls>
+                <source src="media/buds.mp4" type="video/mp4">
+                Az ön böngészője nem támogatja a html5 videolejátszást.
+            </video>
     </body>
 </html>
