Add Home and Clips

--- a/buds.html
+++ b/buds.html
@@ -26,7 +26,7 @@
                     <a href="media/buds1.jpg">Nagyobb méretű kép</a>
                 </figcaption>
             </figure>
-            <p>A Google 2017-es hardveres eseményének egyik meglepetése a Bluetooth-os <a href="https://store.google.com/us/product/google_pixel_buds?hl=en-US"> Pixel Buds </a> nevű fülhallgató volt, ami a Google szerint: “felszabadítja a felhasználó kezét”.</p>
+            <p>A Google 2017-es hardveres eseményének egyik meglepetése a Bluetooth-os <a href="https://store.google.com/us/product/google_pixel_buds?hl=en-US" target="_blank"> Pixel Buds </a> nevű fülhallgató volt, ami a Google szerint: “felszabadítja a felhasználó kezét”.</p>
             <p>A kényelemnél viszont fontosabb, hogy a fülhallgató 40 különböző nyelvet ismer, és valós időben fordítja, amit a felhasználó mond.</p>
             <p>Az esemény színpadán egy társalgással demonstrálták, hogyan fordít a kütyü angolról svédre valós időben, persze a mondatok befejezése után 1-2 másodperces csúszással számolni kell. Az eszközre nem kell közvetlenül semmilyen nyelvi csomagot telepíteni, interneten keresztül zajlik a folyamat, és természetesen mindennek alapja egy minimum 5.0-ás Lollipopot futtató androidos, vagy iOS 10.0-ás telefon, de a Google Assistant használatához már Marshmallow szükséges.</p>
             <figure id="pic2">
