--- a/home.html
+++ b/home.html
@@ -18,29 +18,30 @@
             </ul>
         </nav>
         <article>
-            <h1 class="display-1">Pixel Buds</h1>
+            <h1 class="display-1">Home Mini / Max</h1>
+            <p>A Google sok figyelmet szentelt a bemutatója során a mesterséges intelligenciának, a Google Assistant által elért eredményeknek, és a hozzá kapcsolódó hardveres megoldásoknak. A vállalat tavaly mutatta be a saját otthoni asszisztensét, a Home-ot, most pedig reflektorfénybe állította a Home Minit és a Home Maxot, ezekkel termékcsaláddá bővítve a Home eszközök kínálatát.</p>
             <figure id="pic1">
-                <img src="media/buds1_sm.jpg" alt="Google Pixel Buds fülhallgató" height="200">
+                <img src="media/hmini_sm.jpg" alt="Google Home Mini" height="200">
                 <figcaption>
-                    Google Pixel Buds fülhallgató <br>
-                    <a href="media/buds1.jpg">Nagyobb méretű kép</a>
+                    Google Home Mini<br>
+                    <a href="media/hmini.jpg">Nagyobb méretű kép</a>
                 </figcaption>
             </figure>
-            <p>A Google 2017-es hardveres eseményének egyik meglepetése a Bluetooth-os <a href="https://store.google.com/us/product/google_pixel_buds?hl=en-US"> Pixel Buds </a> nevű fülhallgató volt, ami a Google szerint: “felszabadítja a felhasználó kezét”.</p>
-            <p>A kényelemnél viszont fontosabb, hogy a fülhallgató 40 különböző nyelvet ismer, és valós időben fordítja, amit a felhasználó mond.</p>
-            <p>Az esemény színpadán egy társalgással demonstrálták, hogyan fordít a kütyü angolról svédre valós időben, persze a mondatok befejezése után 1-2 másodperces csúszással számolni kell. Az eszközre nem kell közvetlenül semmilyen nyelvi csomagot telepíteni, interneten keresztül zajlik a folyamat, és természetesen mindennek alapja egy minimum 5.0-ás Lollipopot futtató androidos, vagy iOS 10.0-ás telefon, de a Google Assistant használatához már Marshmallow szükséges.</p>
+            <p>A <a href="https://store.google.com/us/product/google_home_mini?hl=en-US" target="_blank"> Home Mini </a> szinte mindenre képes, mint amire a Home. Az apró kiegészítő bárhol könnyedén elhelyezhető a szobában, a kialakítása nem hivalkodó, így szinte bármilyen környezetbe bele tud olvadni. Elérhető lesz fekete, szürke valamint narancssárga kivitelben is. </p>
+            <p>A Home Mini felületén négy fehér LED szolgáltatja a visszajelzéseket működés közben, más jelzőfény vagy kijelző nincs rajta. A szerkezet érintésérzékeny, meg kell érinteni a felületét a bekapcsolásához és a vezérléséhez. A masinát könnyedén össze lehet majd kapcsolni vezeték nélküli hangszórókkal, az egyetlen feltétele ennek, hogy a másik félnek támogatnia kell a Chromecast technológiát. A Google Home Mini mindössze 50 dollárba kerül majd, és hét országban fogja kezdeni a karrierjét – hazánkba egyelőre nem jön. </p>
             <figure id="pic2">
-                <img src="media/buds2_sm.jpg" alt="Google Pixel Buds tokban" height="200">
+                <img src="media/hmax_sm.jpg" alt="Google Home Max" height="200">
                 <figcaption>
-                    Google Pixel Buds tokban <br>
-                    <a href="media/buds1.jpg">Nagyobb méretű kép</a>
+                    Google Home Max<br>
+                    <a href="media/hmax.jpg">Nagyobb méretű kép</a>
                 </figcaption>
             </figure>
-            <p>A füles jobb felébe épített érintőfelületre tapintva lehet előhívni a Google Assistantot, ami számos feladat elvégzésében segít. Parancsba adható neki, hogy indítsa/szüneteltesse a zenelejátszást, tervezzen útvonalat és navigáljon, vagy indítson el egy hívást. Kézmozdulatokkal pedig olyan alapvető funkciókat végezhetünk el, mint egy dal szüneteltetése, a hangerő szabályzása, vagy hívásokra való válaszolás.</p>
-            <p>A kiegészítő novembertől vásárolható 159 dollárért (42 ezerforint) fekete, fehér, kék színekben. Az amerikai start után az Egyesült Királyságban, majd Ausztráliában, Kanadában, Németországban és a Szingapúrban lesz megvásárolható.</p>
+            <p>A nagyobbik hangszórónál már szinte minden a zenéről szól. A Google azoknak ajánlja a <a href="https://store.google.com/us/product/google_home_max?hl=en-US" target="_blank"> Home Max </a> használatát, akiknek számít a hangerő, valamint a hangminőség. A Google Assistant itt is megtalálható, és minden funkciót tud, amit a Google Home. A Home Max is képes összekapcsolódni mindenféle Chromecast támogatást nyújtó eszközzel, szóval akár még több vagy nagyobb teljesítményű hangszóró is csatlakoztatható hozzá. A forrás pedig nemcsak Bluetooth-on, hanem 3,5 milliméteres bemeneten keresztül is csatlakoztatható.</p>
+            <p>Ennek az eszköznek az újítása a Smart Sound funkció, ami arról gondoskodik, hogy mindig a felhasználó szobában elfoglalt helyéhez próbálja igazítani az eszköz hangzását, hangerejét. Továbbá képes automatikusan szabályozni a hangszínszabályzót, és olyankor is fel tudja hangosítani a zenét, mikor például a mosógép centrifugázni kezd. A masinát állítva vagy fektetve is lehet majd használni, a Google szabad kezet ad a jövendőbeli tulajdonosoknak.</p>
+            <p>A Google Home Max csak decemberben lesz, és akkor is kizárólag az Egyesült Államokban. Ára várhatóan 400 dollár lesz.</p>
         </article>
             <video controls>
-                <source src="media/buds.mp4" type="video/mp4">
+                <source src="media/home.mp4" type="video/mp4">
                 Az ön böngészője nem támogatja a html5 videolejátszást.
             </video>
     </body>
