Change contact to XHTML

--- a/contact.html
+++ b/contact.html
@@ -1,21 +1,24 @@
-<!DOCTYPE html>
-<html lang="hu">
+<?xml version="1.0" encoding="utf-8"?>
+
+<!DOCTYPE html
+   PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd" >
+
+<html xmlns="http://www.w3.org/1999/xhtml" lang="hu">
     <head>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="css/style.css" />
         <title>Google Pixel 2 bemutató - Kapcsolat</title>
     </head>
     <body>
-        <nav>
-            <ul class="nav nav-pills">
-                <li><a href="index.html" >Főoldal</a></li>
-                <li><a href="buds.html">Pixel Buds</a></li>
-                <li><a href="home.html" >Home Mini / Max</a></li>
-                <li><a href="clips.html" >Clips</a></li>
-                <li><a href="book.html" >Pixelbook</a></li>
-                <li><a href="pixel2.html" >Pixel 2 / Pixel 2 XL</a></li>
-                <li class="active"><a href="contact.html" >Kapcsolat</a></li>
-            </ul>
-        </nav>
+        <ul class="nav nav-pills">
+            <li><a href="index.html" >Főoldal</a></li>
+            <li><a href="buds.html">Pixel Buds</a></li>
+            <li><a href="home.html" >Home Mini / Max</a></li>
+            <li><a href="clips.html" >Clips</a></li>
+            <li><a href="book.html" >Pixelbook</a></li>
+            <li><a href="pixel2.html" >Pixel 2 / Pixel 2 XL</a></li>
+            <li class="active"><a href="contact.html" >Kapcsolat</a></li>
+        </ul>
     </body>
 </html>
