--- a/index.html
+++ b/index.html
@@ -18,28 +18,43 @@
             </ul>
         </nav>
         
-        <section id="img-grid">
-            <div class="container">
+        <header id="banner"> </header>
+        
+        <section class="container" id="img-grid">
               <div class="row">
-                <div class="col col-md-6">
-                  1 of 2
-                </div>
-                <div class="col col-md-6">
-                  1 of 2
-                </div>
+                <a href="buds.html"><div class="col-md-3 cell">
+                  <img src="media/img-grid/buds.png" class="image" >
+                  <div class="middle">
+                    <div class="text">Pixel Buds</div>
+                  </div>
+                </div></a>
+                <a href="home.html"><div class="col-md-6 cell">
+                  <img src="media/img-grid/home.png" class="image" >
+                  <div class="middle">
+                    <div class="text">Home Mini / Max</div>
+                  </div>
+                </div></a>
+                <a href="clips.html"><div class="col-md-3 cell">
+                  <img src="media/img-grid/clips.jpg" class="image" >
+                  <div class="middle">
+                    <div class="text">Clips</div>
+                  </div>
+                </div></a>
               </div>
               <div class="row">
-                <div class="col col-md-4">
-                  1 of 3
-                </div>
-                <div class="col col-md-4">
-                  1 of 3
-                </div>
-                <div class="col col-md-4">
-                  1 of 3
-                </div>
+                <a href="book.html"><div class="col-md-6 cell">
+                  <img src="media/img-grid/book.jpg" class="image" >
+                  <div class="middle">
+                    <div class="text">Pixelbook</div>
+                  </div>
+                </div></a>
+                <a href="pixel2.html"><div class="col-md-6 cell">
+                  <img src="media/img-grid/pixel.png" class="image" >
+                  <div class="middle">
+                    <div class="text">Pixel 2 / Pixel 2 XL</div>
+                  </div>
+                </div></a>
               </div>
-            </div>
         </section>
     </body>
 </html>
