Fix some errors

--- a/buds.html
+++ b/buds.html
@@ -38,10 +38,13 @@
             </figure>
             <p>A füles jobb felébe épített érintőfelületre tapintva lehet előhívni a Google Assistantot, ami számos feladat elvégzésében segít. Parancsba adható neki, hogy indítsa/szüneteltesse a zenelejátszást, tervezzen útvonalat és navigáljon, vagy indítson el egy hívást. Kézmozdulatokkal pedig olyan alapvető funkciókat végezhetünk el, mint egy dal szüneteltetése, a hangerő szabályzása, vagy hívásokra való válaszolás.</p>
             <p>A kiegészítő novembertől vásárolható 159 dollárért (42 ezerforint) fekete, fehér, kék színekben. Az amerikai start után az Egyesült Királyságban, majd Ausztráliában, Kanadában, Németországban és a Szingapúrban lesz megvásárolható.</p>
+            <section>
+                <h2>Bemutató videó(angol nyelven) - 3p 42mp :</h2>
+                <video controls>
+                    <source src="media/buds.mp4" type="video/mp4">
+                    Az ön böngészője nem támogatja a html5 videolejátszást.
+                </video>
+            </section>
         </article>
-            <video controls>
-                <source src="media/buds.mp4" type="video/mp4">
-                Az ön böngészője nem támogatja a html5 videolejátszást.
-            </video>
     </body>
 </html>
