--- a/home.html
+++ b/home.html
@@ -39,6 +39,14 @@
             <p>A nagyobbik hangszórónál már szinte minden a zenéről szól. A Google azoknak ajánlja a <a href="https://store.google.com/us/product/google_home_max?hl=en-US" target="_blank"> Home Max </a> használatát, akiknek számít a hangerő, valamint a hangminőség. A Google Assistant itt is megtalálható, és minden funkciót tud, amit a Google Home. A Home Max is képes összekapcsolódni mindenféle Chromecast támogatást nyújtó eszközzel, szóval akár még több vagy nagyobb teljesítményű hangszóró is csatlakoztatható hozzá. A forrás pedig nemcsak Bluetooth-on, hanem 3,5 milliméteres bemeneten keresztül is csatlakoztatható.</p>
             <p>Ennek az eszköznek az újítása a Smart Sound funkció, ami arról gondoskodik, hogy mindig a felhasználó szobában elfoglalt helyéhez próbálja igazítani az eszköz hangzását, hangerejét. Továbbá képes automatikusan szabályozni a hangszínszabályzót, és olyankor is fel tudja hangosítani a zenét, mikor például a mosógép centrifugázni kezd. A masinát állítva vagy fektetve is lehet majd használni, a Google szabad kezet ad a jövendőbeli tulajdonosoknak.</p>
             <p>A Google Home Max csak decemberben lesz, és akkor is kizárólag az Egyesült Államokban. Ára várhatóan 400 dollár lesz.</p>
+            <section>
+                <h2>Bemutató videó(angol nyelven) - 4p 15mp :</h2>
+                <video controls>
+                    <source src="media/home.mp4" type="video/mp4">
+                    Az ön böngészője nem támogatja a html5 videolejátszást.
+                </video>
+            </section>
+        </article>
         </article>
             <video controls>
                 <source src="media/home.mp4" type="video/mp4">
