--- a/clips.html
+++ b/clips.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="hu">
     <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -62,10 +63,13 @@
                 <td>USB-C, WiFi, Bluetooth</td>
               </tr>
             </table>
+            <section>
+                <h2>Bemutató videó(angol nyelven) - 6p 42mp :</h2>
+                <video controls>
+                    <source src="media/clips.mp4" type="video/mp4">
+                    Az ön böngészője nem támogatja a html5 videolejátszást.
+                </video>
+            </section>
         </article>
-            <video controls>
-                <source src="media/clips.mp4" type="video/mp4">
-                Az ön böngészője nem támogatja a html5 videolejátszást.
-            </video>
     </body>
 </html>
