--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         
         <header id="banner"> </header>
         
-        <section class="container" id="img-grid">
+        <div class="container">
               <div class="row">
                 <a href="buds.html"><div class="col-md-3 cell">
                   <img src="media/img-grid/buds.png" class="image" >
