Fix more errors

--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
         <div class="container">
               <div class="row">
                 <a href="buds.html"><div class="col-md-3 cell">
-                  <img src="media/img-grid/buds.png" class="image" >
+                  <img src="media/img-grid/buds.png" class="image" alt="Pixel Buds">
                   <div class="middle">
                     <div class="text">Pixel Buds</div>
                   </div>
                 </div></a>
                 <a href="home.html"><div class="col-md-6 cell">
-                  <img src="media/img-grid/home.png" class="image" >
+                  <img src="media/img-grid/home.png" class="image" alt="Home Mini / Max">
                   <div class="middle">
                     <div class="text">Home Mini / Max</div>
                   </div>
                 </div></a>
                 <a href="clips.html"><div class="col-md-3 cell">
-                  <img src="media/img-grid/clips.jpg" class="image" >
+                  <img src="media/img-grid/clips.jpg" class="image" alt="Clips">
                   <div class="middle">
                     <div class="text">Clips</div>
                   </div>
@@ -43,18 +43,18 @@
               </div>
               <div class="row">
                 <a href="book.html"><div class="col-md-6 cell">
-                  <img src="media/img-grid/book.jpg" class="image" >
+                  <img src="media/img-grid/book.jpg" class="image" alt="Pixelbook">
                   <div class="middle">
                     <div class="text">Pixelbook</div>
                   </div>
                 </div></a>
                 <a href="pixel2.html"><div class="col-md-6 cell">
-                  <img src="media/img-grid/pixel.png" class="image" >
+                  <img src="media/img-grid/pixel.png" class="image" alt="Pixel 2 / 2 XL">
                   <div class="middle">
                     <div class="text">Pixel 2 / Pixel 2 XL</div>
                   </div>
                 </div></a>
               </div>
-        </section>
+        </div>
     </body>
 </html>
