--- a/book.html
+++ b/book.html
@@ -3,9 +3,15 @@
     <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="js/betumeret.js"></script>
         <title>Google Pixel 2 bemutató - Pixelbook</title>
     </head>
     <body>
+        <div id="betumeretvalto">
+            <button type="button" id="novel">A+</button>
+            <button type="button" id="csokkent">A-</button>
+        </div>
         <nav>
             <ul class="nav nav-pills">
                 <li><a href="index.html" >Főoldal</a></li>
@@ -14,34 +20,36 @@
                 <li><a href="clips.html" >Clips</a></li>
                 <li class="active"><a href="book.html" >Pixelbook</a></li>
                 <li><a href="pixel2.html" >Pixel 2 / Pixel 2 XL</a></li>
-                <li><a href="contact.html" >Kapcsolat</a></li>
+                <li><a href="contact.xhtml" >Kapcsolat</a></li>
             </ul>
         </nav>
         <article>
-            <h1 class="display-1">Pixel Buds</h1>
+            <h1 class="display-1">Pixelbook</h1>
+            <p>Bizonyára emlékeznek még a Google Pixel laptopra, melyet a Google nemrég nyugdíjazott. A <a href="https://store.google.com/us/product/google_pixelbook?hl=en-US"> Pixelbookkal </a> valami hasonlóval, de mégis újjal rukkolt elő a vállalat.</p>
             <figure id="pic1">
-                <img src="media/buds1_sm.jpg" alt="Google Pixel Buds fülhallgató" height="200">
+                <img src="media/book1_sm.jpg" alt="Google Pixelbook laptop" height="200">
                 <figcaption>
                     Google Pixel Buds fülhallgató <br>
-                    <a href="media/buds1.jpg">Nagyobb méretű kép</a>
+                    <a href="media/book1.jpg">Nagyobb méretű kép</a>
                 </figcaption>
             </figure>
-            <p>A Google 2017-es hardveres eseményének egyik meglepetése a Bluetooth-os <a href="https://store.google.com/us/product/google_pixel_buds?hl=en-US"> Pixel Buds </a> nevű fülhallgató volt, ami a Google szerint: “felszabadítja a felhasználó kezét”.</p>
-            <p>A kényelemnél viszont fontosabb, hogy a fülhallgató 40 különböző nyelvet ismer, és valós időben fordítja, amit a felhasználó mond.</p>
-            <p>Az esemény színpadán egy társalgással demonstrálták, hogyan fordít a kütyü angolról svédre valós időben, persze a mondatok befejezése után 1-2 másodperces csúszással számolni kell. Az eszközre nem kell közvetlenül semmilyen nyelvi csomagot telepíteni, interneten keresztül zajlik a folyamat, és természetesen mindennek alapja egy minimum 5.0-ás Lollipopot futtató androidos, vagy iOS 10.0-ás telefon, de a Google Assistant használatához már Marshmallow szükséges.</p>
+            <p>Az laptop mindössze 1 kg-ot nyom és 10,3 milliméter vastag, miközben a fedele 360 fokban visszafordítható, tehát lényegében egy prémium kategóriás 2-az-1-ben.. Ennek központi eleme a fedélbe épített 12,3"-es képátlójú, 3:2 képarányú kijelző, mely 2400x1600 képpontos felbontást kínál, és természetesen érintésérzékeny. Ezt nem csak az ujjunkkal, hanem a külön megvásárolható Google <a href="https://store.google.com/us/product/google_pixelbook_pen?hl=en-US" target="_blank">Pixelbook Pen</a> aktív tollal is használhatjuk. A 99 dolláros, AAAA elemmel működő beviteli segédeszköz 60 fokban dönthető minden irányban, 2000 feletti nyomásérzékenységi fokozattal rendelkezik, késleltetése pedig mindössze 10 ezredmásodperc.</p>
             <figure id="pic2">
-                <img src="media/buds2_sm.jpg" alt="Google Pixel Buds tokban" height="200">
+                <img src="media/book2_sm.jpg" alt="Google Pixel Buds tokban" height="200">
                 <figcaption>
                     Google Pixel Buds tokban <br>
-                    <a href="media/buds1.jpg">Nagyobb méretű kép</a>
+                    <a href="media/book2.jpg">Nagyobb méretű kép</a>
                 </figcaption>
             </figure>
-            <p>A füles jobb felébe épített érintőfelületre tapintva lehet előhívni a Google Assistantot, ami számos feladat elvégzésében segít. Parancsba adható neki, hogy indítsa/szüneteltesse a zenelejátszást, tervezzen útvonalat és navigáljon, vagy indítson el egy hívást. Kézmozdulatokkal pedig olyan alapvető funkciókat végezhetünk el, mint egy dal szüneteltetése, a hangerő szabályzása, vagy hívásokra való válaszolás.</p>
-            <p>A kiegészítő novembertől vásárolható 159 dollárért (42 ezerforint) fekete, fehér, kék színekben. Az amerikai start után az Egyesült Királyságban, majd Ausztráliában, Kanadában, Németországban és a Szingapúrban lesz megvásárolható.</p>
+            <p>A háttérvilágítással és dedikált Google Assistant gombbal ellátott billentyűzet, valamint a méretes touchpad szintén az összeállítás része. Tekintettel arra, hogy a masina Chrome OS-t futtat (amire feltelepíthetőek az Androidra íródott alkalmazások) az Intel Core i5 és i7 processzorok kissé erősnek tűnnek , ezek mellé ráadásul 8-16 GB RAM és legfeljebb 512 GB-os SSD kerülhet. A gép méretéhez és felszereltségéhez képest az akkumulátoros üzemidő is elfogadható, a Google szerint maximum 10 óra. A töltés USB Type-C porton keresztül történik és van gyorstöltés is, ekkor 15 perc alatt két órára elegendő energiát lehet belepumpálni.</p>
+            <p>A Google Pixelbook már előrendelhető, de sajnos nem tudjuk mindenhol megvásárolni (nálunk például nem). A laptop ára 999 dollárról indul és egészen 1649 dollárig konfigurálható (plusz toll 99 dollárért, ha szükséges).</p>
+            <section>
+                <h2>Bemutató videó(angol nyelven) - 6p 06mp :</h2>
+                <video controls>
+                    <source src="media/book.mp4" type="video/mp4">
+                    Az ön böngészője nem támogatja a html5 videolejátszást.
+                </video>
+            </section>
         </article>
-            <video controls>
-                <source src="media/buds.mp4" type="video/mp4">
-                Az ön böngészője nem támogatja a html5 videolejátszást.
-            </video>
     </body>
 </html>
