--- a/clips.html
+++ b/clips.html
@@ -3,9 +3,15 @@
     <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="js/betumeret.js"></script>
         <title>Google Pixel 2 bemutató - Clips</title>
     </head>
     <body>
+        <div id="betumeretvalto">
+            <button type="button" id="novel">A+</button>
+            <button type="button" id="csokkent">A-</button>
+        </div>
         <nav>
             <ul class="nav nav-pills">
                 <li><a href="index.html" >Főoldal</a></li>
@@ -14,7 +20,7 @@
                 <li class="active"><a href="clips.html" >Clips</a></li>
                 <li><a href="book.html" >Pixelbook</a></li>
                 <li><a href="pixel2.html" >Pixel 2 / Pixel 2 XL</a></li>
-                <li><a href="contact.html" >Kapcsolat</a></li>
+                <li><a href="contact.xhtml" >Kapcsolat</a></li>
             </ul>
         </nav>
         <article>
