--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="hu">
     <head>
+        <meta charset="utf-8" > 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="js/betumeret.js"></script>
         <title>Google Pixel 2 bemutató - Főoldal</title>
     </head>
     <body>
+        <div id="betumeretvalto">
+            <button type="button" id="novel">A+</button>
+            <button type="button" onclick="csokkent()">A-</button>
+        </div>
         <nav>
             <ul class="nav nav-pills">
                 <li class="active"><a href="index.html" >Főoldal</a></li>
@@ -14,8 +21,9 @@
                 <li><a href="clips.html" >Clips</a></li>
                 <li><a href="book.html" >Pixelbook</a></li>
                 <li><a href="pixel2.html" >Pixel 2 / Pixel 2 XL</a></li>
-                <li><a href="contact.html" >Kapcsolat</a></li>
+                <li><a href="contact.xhtml" >Kapcsolat</a></li>
             </ul>
+            
         </nav>
         
         <header id="banner"> </header>
@@ -56,5 +64,10 @@
                 </div></a>
               </div>
         </div>
+        <footer>
+            <address>
+                <p>Készítette: Bárdosi Bence (<a href="mailto:vy9njn@caesar.elte.hu">vy9njn@caesar.elte.hu), </a> Neptun kód: VY9NJN</p>
+            </address>
+        </footer>
     </body>
 </html>
