--- a/pixel2.html
+++ b/pixel2.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="hu">
     <head>
+        <meta charset="utf-8" > 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="js/betumeret.js"></script>
         <title>Google Pixel 2 bemutató - Pixel 2 / Pixel 2 XL</title>
     </head>
     <body>
+        <div id="betumeretvalto">
+            <button type="button" id="novel">A+</button>
+            <button type="button" id="csokkent">A-</button>
+        </div>
         <nav>
             <ul class="nav nav-pills">
                 <li><a href="index.html" >Főoldal</a></li>
@@ -14,34 +21,37 @@
                 <li><a href="clips.html" >Clips</a></li>
                 <li><a href="book.html" >Pixelbook</a></li>
                 <li class="active"><a href="pixel2.html" >Pixel 2 / Pixel 2 XL</a></li>
-                <li><a href="contact.html" >Kapcsolat</a></li>
+                <li><a href="contact.xhtml" >Kapcsolat</a></li>
             </ul>
         </nav>
         <article>
-            <h1 class="display-1">Pixel Buds</h1>
+            <h1 class="display-1">Pixel 2 / Pixel 2 XL</h1>
             <figure id="pic1">
-                <img src="media/buds1_sm.jpg" alt="Google Pixel Buds fülhallgató" height="200">
+                <img src="media/pixel21_sm.jpg" alt="Google Pixel 2 és 2 XL telefon" height="200">
                 <figcaption>
-                    Google Pixel Buds fülhallgató <br>
-                    <a href="media/buds1.jpg">Nagyobb méretű kép</a>
+                    Google Pixel 2 és 2XL telefon <br>
+                    <a href="media/pixel21.jpg">Nagyobb méretű kép</a>
                 </figcaption>
             </figure>
-            <p>A Google 2017-es hardveres eseményének egyik meglepetése a Bluetooth-os <a href="https://store.google.com/us/product/google_pixel_buds?hl=en-US"> Pixel Buds </a> nevű fülhallgató volt, ami a Google szerint: “felszabadítja a felhasználó kezét”.</p>
-            <p>A kényelemnél viszont fontosabb, hogy a fülhallgató 40 különböző nyelvet ismer, és valós időben fordítja, amit a felhasználó mond.</p>
-            <p>Az esemény színpadán egy társalgással demonstrálták, hogyan fordít a kütyü angolról svédre valós időben, persze a mondatok befejezése után 1-2 másodperces csúszással számolni kell. Az eszközre nem kell közvetlenül semmilyen nyelvi csomagot telepíteni, interneten keresztül zajlik a folyamat, és természetesen mindennek alapja egy minimum 5.0-ás Lollipopot futtató androidos, vagy iOS 10.0-ás telefon, de a Google Assistant használatához már Marshmallow szükséges.</p>
+            <p>A Google <a href="https://store.google.com/us/product/pixel_2?hl=en-US">Pixel 2</a> okostelefon gyárilag Android 8.0 Oreo rendszerrel és talán a valaha volt legjobb kamerával debütált. A Google mérnökei a mostani trend ellenére hatalmas kávát hagytak a kijelző alatt és felett, ennek oka a két méretes, előlapi hangszóró jelenléte. A burkolat alatt a Snapdragon 835 chipset dolgozik, és bár érthetetlennek tűnhet, hogy nincs két kamera, ez nem véletlen, ugyanis  az egy szem érzékelő várhatóan jobb lesz, mint az ellenfelek kétkamerás rendszerei.</p>
+            <p>Amiben különleges a Google Pixel 2, az a 12 megapixeles hátlapi kamera. A funkciók között elérhető folyamatos optikai és elektronikus képstabilizátor is a videók esetében, ez hatalmas előrelépés, a világon elsőként a Pixel 2-ben érhető el. A továbbfejlesztett HDR+ miatt még jobb a fotók dinamikája, a portré módnak köszönhetően pedig elérhető a bokeh effekt is, mindezt pedig egyetlen kamerával valósította meg a Google. A szenzorban minden pixelt kettéosztottak – más néven ez a Dual Pixel technológia – ez teszi lehetővé, hogy mélysége legyen a portréknak. Plusz extra, hogy az előlapi kamera is tudja a portré módot.</p>
+            <p>Az természetesen alap a Google Pixel 2 tulajdonosoknak, hogy teljesen korlátlan tárhelyet kapnak a fotóik és videóik számára a Google Photosban. Újításként a Google keresősávja a navigációs gombok fölé került ergonómiai szempontból, felül a következő naptárbejegyzések láthatók az új widgetet használva. Az Active Edge hasonlít a HTC Edge Sense megoldásához, lehetővé teszi, hogy a telefon keretét használva gyors-funkciókat érjünk el gyorsan, mint például egy szelfi készítése.</p>
             <figure id="pic2">
-                <img src="media/buds2_sm.jpg" alt="Google Pixel Buds tokban" height="200">
+                <img src="media/pixel22_sm.png" alt="Google Pixel 2 telefonok" height="200">
                 <figcaption>
-                    Google Pixel Buds tokban <br>
-                    <a href="media/buds1.jpg">Nagyobb méretű kép</a>
+                    Google Pixel 2 telefonok <br>
+                    <a href="media/pixel22.png">Nagyobb méretű kép</a>
                 </figcaption>
             </figure>
-            <p>A füles jobb felébe épített érintőfelületre tapintva lehet előhívni a Google Assistantot, ami számos feladat elvégzésében segít. Parancsba adható neki, hogy indítsa/szüneteltesse a zenelejátszást, tervezzen útvonalat és navigáljon, vagy indítson el egy hívást. Kézmozdulatokkal pedig olyan alapvető funkciókat végezhetünk el, mint egy dal szüneteltetése, a hangerő szabályzása, vagy hívásokra való válaszolás.</p>
-            <p>A kiegészítő novembertől vásárolható 159 dollárért (42 ezerforint) fekete, fehér, kék színekben. Az amerikai start után az Egyesült Királyságban, majd Ausztráliában, Kanadában, Németországban és a Szingapúrban lesz megvásárolható.</p>
+            <p>Az Egyesült Államokban biztos, hogy eSIM-et kap ráadásul a Pixel 2, amely azt jelenti, hogy bár található benne eltávolítható nano SIM kártya foglalat, ahol erre lehetőség van, a szolgáltatók választhatják az eSIM-es azonosítást is. A beépített akkumulátor támogatja a gyorstöltést, viszont a tárhely nem bővíthető, így célszerű előre gondolkodni a kisebb vagy nagyobb modell választása esetén. A bejelentésen elhangzott, hogy nem szeretné a Google, hogy a nagyobb méretű modell okosabb is legyen, így a felhasználóknak valóban csak azt kell eldönteni, hogy mekkora telefont szeretnének, aki a kisebbet választja, nem kell ezért kompromisszumot kötni. </p>
+            <p>A Google Pixel 2 a tengerentúlon egyelőre csak a Verizon szolgáltatónál lesz elérhető, a Google Store-ra csak később kerülnek fel a kártyafüggetlen modellek. Szintén később Németország és Nagy-Britannia is értékesíti majd a Pixel 2-t 650-750, a Pixel 2 XL-t pedig 850-950 eurós áron.</p>
+            <section>
+                <h2>Bemutató videó(angol nyelven) - 8p 35mp :</h2>
+                <video controls>
+                    <source src="media/pixel2.mp4" type="video/mp4">
+                    Az ön böngészője nem támogatja a html5 videolejátszást.
+                </video>
+            </section>
         </article>
-            <video controls>
-                <source src="media/buds.mp4" type="video/mp4">
-                Az ön böngészője nem támogatja a html5 videolejátszást.
-            </video>
     </body>
 </html>
