Fix typo in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div id="betumeretvalto">
             <button type="button" id="novel">A+</button>
-            <button type="button" od="csokkent">A-</button>
+            <button type="button" id="csokkent">A-</button>
         </div>
         <nav>
             <ul class="nav nav-pills">
