--- a/book.html
+++ b/book.html
@@ -42,7 +42,10 @@
                 </figcaption>
             </figure>
             <p>A háttérvilágítással és dedikált Google Assistant gombbal ellátott billentyűzet, valamint a méretes touchpad szintén az összeállítás része. Tekintettel arra, hogy a masina Chrome OS-t futtat (amire feltelepíthetőek az Androidra íródott alkalmazások) az Intel Core i5 és i7 processzorok kissé erősnek tűnnek , ezek mellé ráadásul 8-16 GB RAM és legfeljebb 512 GB-os SSD kerülhet. A gép méretéhez és felszereltségéhez képest az akkumulátoros üzemidő is elfogadható, a Google szerint maximum 10 óra. A töltés USB Type-C porton keresztül történik és van gyorstöltés is, ekkor 15 perc alatt két órára elegendő energiát lehet belepumpálni.</p>
-            <p>A Google Pixelbook már előrendelhető, de sajnos nem tudjuk mindenhol megvásárolni (nálunk például nem). A laptop ára 999 dollárról indul és egészen 1649 dollárig konfigurálható (plusz toll 99 dollárért, ha szükséges).</p>
+            <aside>
+                <p>A Google Pixelbook már előrendelhető, de sajnos nem tudjuk mindenhol megvásárolni (nálunk például nem). A laptop ára 999 dollárról indul és egészen 1649 dollárig konfigurálható (plusz toll 99 dollárért, ha szükséges).</p>
+            </aside>
+            
             <section>
                 <h2>Bemutató videó(angol nyelven) - 6p 06mp :</h2>
                 <video controls>
