--- a/buds.html
+++ b/buds.html
@@ -43,7 +43,9 @@
                 </figcaption>
             </figure>
             <p>A füles jobb felébe épített érintőfelületre tapintva lehet előhívni a Google Assistantot, ami számos feladat elvégzésében segít. Parancsba adható neki, hogy indítsa/szüneteltesse a zenelejátszást, tervezzen útvonalat és navigáljon, vagy indítson el egy hívást. Kézmozdulatokkal pedig olyan alapvető funkciókat végezhetünk el, mint egy dal szüneteltetése, a hangerő szabályzása, vagy hívásokra való válaszolás.</p>
-            <p>A kiegészítő novembertől vásárolható 159 dollárért (42 ezerforint) fekete, fehér, kék színekben. Az amerikai start után az Egyesült Királyságban, majd Ausztráliában, Kanadában, Németországban és a Szingapúrban lesz megvásárolható.</p>
+            <aside>
+                <p>A kiegészítő novembertől vásárolható 159 dollárért (42 ezerforint) fekete, fehér, kék színekben. Az amerikai start után az Egyesült Királyságban, majd Ausztráliában, Kanadában, Németországban és a Szingapúrban lesz megvásárolható.</p>
+            </aside>
             <section>
                 <h2>Bemutató videó(angol nyelven) - 3p 42mp :</h2>
                 <video controls>
