--- a/clips.html
+++ b/clips.html
@@ -32,7 +32,10 @@
                     <a href="media/clips.jpg">Nagyobb méretű kép</a>
                 </figcaption>
             </figure>
-            <p>Apró, ügyes kis szerkezet a Google új automata kamerája, a<a href="https://store.google.com/us/product/google_clips?hl=en-US" target="_blank"> Clips </a> egyrészt arra képes, hogy bárhová letesszük, ő magától elkezd fotókat lövöldözni olyan esetekben, amiket ő maga (illetve a mögötte levő gépi agy) érdekesnek talál. Ezt pedig folyamatosan tanulja abból, hogy a telefonunkra automatikusan átküldött képeiből melyikeket tartjuk meg. Persze mindez 250 dollárért már kissé drága játékszer, de itt sem a hardvert kell megfizetni, mint inkább a mögötte megbújó tudást. </p>
+            <p>Apró, ügyes kis szerkezet a Google új automata kamerája, a<a href="https://store.google.com/us/product/google_clips?hl=en-US" target="_blank"> Clips </a> egyrészt arra képes, hogy bárhová letesszük, ő magától elkezd fotókat lövöldözni olyan esetekben, amiket ő maga (illetve a mögötte levő gépi agy) érdekesnek talál. Ezt pedig folyamatosan tanulja abból, hogy a telefonunkra automatikusan átküldött képeiből melyikeket tartjuk meg.</p>
+            <aside>
+                <p>Persze mindez 250 dollárért már kissé drága játékszer, de itt sem a hardvert kell megfizetni, mint inkább a mögötte megbújó tudást. </p>
+            </aside>
             <table>
                 <caption>
                   <details>
