--- a/pixel2.html
+++ b/pixel2.html
@@ -44,7 +44,10 @@
                 </figcaption>
             </figure>
             <p>Az Egyesült Államokban biztos, hogy eSIM-et kap ráadásul a Pixel 2, amely azt jelenti, hogy bár található benne eltávolítható nano SIM kártya foglalat, ahol erre lehetőség van, a szolgáltatók választhatják az eSIM-es azonosítást is. A beépített akkumulátor támogatja a gyorstöltést, viszont a tárhely nem bővíthető, így célszerű előre gondolkodni a kisebb vagy nagyobb modell választása esetén. A bejelentésen elhangzott, hogy nem szeretné a Google, hogy a nagyobb méretű modell okosabb is legyen, így a felhasználóknak valóban csak azt kell eldönteni, hogy mekkora telefont szeretnének, aki a kisebbet választja, nem kell ezért kompromisszumot kötni. </p>
-            <p>A Google Pixel 2 a tengerentúlon egyelőre csak a Verizon szolgáltatónál lesz elérhető, a Google Store-ra csak később kerülnek fel a kártyafüggetlen modellek. Szintén később Németország és Nagy-Britannia is értékesíti majd a Pixel 2-t 650-750, a Pixel 2 XL-t pedig 850-950 eurós áron.</p>
+            <aside>
+                <p>A Google Pixel 2 a tengerentúlon egyelőre csak a Verizon szolgáltatónál lesz elérhető, a Google Store-ra csak később kerülnek fel a kártyafüggetlen modellek. Szintén később Németország és Nagy-Britannia is értékesíti majd a Pixel 2-t 650-750, a Pixel 2 XL-t pedig 850-950 eurós áron.</p>
+            </aside>
+            
             <section>
                 <h2>Bemutató videó(angol nyelven) - 8p 35mp :</h2>
                 <video controls>
