Fix more errors

--- a/clips.html
+++ b/clips.html
@@ -29,7 +29,7 @@
                 <img src="media/clips_sm.jpg" alt="Google Clips kamera" height="200">
                 <figcaption>
                     Google Clips kamera <br>
-                    <a href="media/clips.jpg">Nagyobb méretű kép</a>
+                    <a href="https://balambuc.github.io/media/clips.jpg">Nagyobb méretű kép</a>
                 </figcaption>
             </figure>
             <p>Apró, ügyes kis szerkezet a Google új automata kamerája, a<a href="https://store.google.com/us/product/google_clips?hl=en-US" target="_blank"> Clips </a> egyrészt arra képes, hogy bárhová letesszük, ő magától elkezd fotókat lövöldözni olyan esetekben, amiket ő maga (illetve a mögötte levő gépi agy) érdekesnek talál. Ezt pedig folyamatosan tanulja abból, hogy a telefonunkra automatikusan átküldött képeiből melyikeket tartjuk meg.</p>
@@ -75,7 +75,7 @@
             <section>
                 <h2>Bemutató videó(angol nyelven) - 6p 42mp :</h2>
                 <video controls>
-                    <source src="media/clips.mp4" type="video/mp4">
+                    <source src="https://balambuc.github.io/media/clips.mp4" type="video/mp4">
                     Az ön böngészője nem támogatja a html5 videolejátszást.
                 </video>
             </section>
