--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
                 <img src="media/hmini_sm.jpg" alt="Google Home Mini" height="200">
                 <figcaption>
                     Google Home Mini<br>
-                    <a href="media/hmini.jpg">Nagyobb méretű kép</a>
+                    <a href="https://balambuc.github.io/media/hmini.jpg">Nagyobb méretű kép</a>
                 </figcaption>
             </figure>
             <p>A <a href="https://store.google.com/us/product/google_home_mini?hl=en-US" target="_blank"> Home Mini </a> szinte mindenre képes, mint amire a Home. Az apró kiegészítő bárhol könnyedén elhelyezhető a szobában, a kialakítása nem hivalkodó, így szinte bármilyen környezetbe bele tud olvadni. Elérhető lesz fekete, szürke valamint narancssárga kivitelben is. </p>
@@ -40,7 +40,7 @@
                 <img src="media/hmax_sm.jpg" alt="Google Home Max" height="200">
                 <figcaption>
                     Google Home Max<br>
-                    <a href="media/hmax.jpg">Nagyobb méretű kép</a>
+                    <a href="https://balambuc.github.io/media/hmax.jpg">Nagyobb méretű kép</a>
                 </figcaption>
             </figure>
             <p>A nagyobbik hangszórónál már szinte minden a zenéről szól. A Google azoknak ajánlja a <a href="https://store.google.com/us/product/google_home_max?hl=en-US" target="_blank"> Home Max </a> használatát, akiknek számít a hangerő, valamint a hangminőség. A Google Assistant itt is megtalálható, és minden funkciót tud, amit a Google Home. A Home Max is képes összekapcsolódni mindenféle Chromecast támogatást nyújtó eszközzel, szóval akár még több vagy nagyobb teljesítményű hangszóró is csatlakoztatható hozzá. A forrás pedig nemcsak Bluetooth-on, hanem 3,5 milliméteres bemeneten keresztül is csatlakoztatható.</p>
@@ -52,7 +52,7 @@
             <section>
                 <h2>Bemutató videó(angol nyelven) - 4p 15mp :</h2>
                 <video controls>
-                    <source src="media/home.mp4" type="video/mp4">
+                    <source src="https://balambuc.github.io/media/home.mp4" type="video/mp4">
                     Az ön böngészője nem támogatja a html5 videolejátszást.
                 </video>
             </section>
