--- a/pixel2.html
+++ b/pixel2.html
@@ -30,7 +30,7 @@
                 <img src="media/pixel21_sm.jpg" alt="Google Pixel 2 és 2 XL telefon" height="200">
                 <figcaption>
                     Google Pixel 2 és 2XL telefon <br>
-                    <a href="media/pixel21.jpg">Nagyobb méretű kép</a>
+                    <a href="https://balambuc.github.io/media/pixel21.jpg">Nagyobb méretű kép</a>
                 </figcaption>
             </figure>
             <p>A Google <a href="https://store.google.com/us/product/pixel_2?hl=en-US">Pixel 2</a> okostelefon gyárilag Android 8.0 Oreo rendszerrel és talán a valaha volt legjobb kamerával debütált. A Google mérnökei a mostani trend ellenére hatalmas kávát hagytak a kijelző alatt és felett, ennek oka a két méretes, előlapi hangszóró jelenléte. A burkolat alatt a Snapdragon 835 chipset dolgozik, és bár érthetetlennek tűnhet, hogy nincs két kamera, ez nem véletlen, ugyanis  az egy szem érzékelő várhatóan jobb lesz, mint az ellenfelek kétkamerás rendszerei.</p>
@@ -40,7 +40,7 @@
                 <img src="media/pixel22_sm.png" alt="Google Pixel 2 telefonok" height="200">
                 <figcaption>
                     Google Pixel 2 telefonok <br>
-                    <a href="media/pixel22.png">Nagyobb méretű kép</a>
+                    <a href="https://balambuc.github.io/media/pixel22.png">Nagyobb méretű kép</a>
                 </figcaption>
             </figure>
             <p>Az Egyesült Államokban biztos, hogy eSIM-et kap ráadásul a Pixel 2, amely azt jelenti, hogy bár található benne eltávolítható nano SIM kártya foglalat, ahol erre lehetőség van, a szolgáltatók választhatják az eSIM-es azonosítást is. A beépített akkumulátor támogatja a gyorstöltést, viszont a tárhely nem bővíthető, így célszerű előre gondolkodni a kisebb vagy nagyobb modell választása esetén. A bejelentésen elhangzott, hogy nem szeretné a Google, hogy a nagyobb méretű modell okosabb is legyen, így a felhasználóknak valóban csak azt kell eldönteni, hogy mekkora telefont szeretnének, aki a kisebbet választja, nem kell ezért kompromisszumot kötni. </p>
@@ -51,7 +51,7 @@
             <section>
                 <h2>Bemutató videó(angol nyelven) - 8p 35mp :</h2>
                 <video controls>
-                    <source src="media/pixel2.mp4" type="video/mp4">
+                    <source src="https://balambuc.github.io/media/pixel2.mp4" type="video/mp4">
                     Az ön böngészője nem támogatja a html5 videolejátszást.
                 </video>
             </section>
