--- a/book.html
+++ b/book.html
@@ -30,7 +30,7 @@
                 <img src="media/book1_sm.jpg" alt="Google Pixelbook laptop" height="200">
                 <figcaption>
                     Google Pixel Buds fülhallgató <br>
-                    <a href="media/book1.jpg">Nagyobb méretű kép</a>
+                    <a href="https://balambuc.github.io/media/book1.jpg">Nagyobb méretű kép</a>
                 </figcaption>
             </figure>
             <p>Az laptop mindössze 1 kg-ot nyom és 10,3 milliméter vastag, miközben a fedele 360 fokban visszafordítható, tehát lényegében egy prémium kategóriás 2-az-1-ben.. Ennek központi eleme a fedélbe épített 12,3"-es képátlójú, 3:2 képarányú kijelző, mely 2400x1600 képpontos felbontást kínál, és természetesen érintésérzékeny. Ezt nem csak az ujjunkkal, hanem a külön megvásárolható Google <a href="https://store.google.com/us/product/google_pixelbook_pen?hl=en-US" target="_blank">Pixelbook Pen</a> aktív tollal is használhatjuk. A 99 dolláros, AAAA elemmel működő beviteli segédeszköz 60 fokban dönthető minden irányban, 2000 feletti nyomásérzékenységi fokozattal rendelkezik, késleltetése pedig mindössze 10 ezredmásodperc.</p>
@@ -38,7 +38,7 @@
                 <img src="media/book2_sm.jpg" alt="Google Pixel Buds tokban" height="200">
                 <figcaption>
                     Google Pixel Buds tokban <br>
-                    <a href="media/book2.jpg">Nagyobb méretű kép</a>
+                    <a href="https://balambuc.github.io/media/book2.jpg">Nagyobb méretű kép</a>
                 </figcaption>
             </figure>
             <p>A háttérvilágítással és dedikált Google Assistant gombbal ellátott billentyűzet, valamint a méretes touchpad szintén az összeállítás része. Tekintettel arra, hogy a masina Chrome OS-t futtat (amire feltelepíthetőek az Androidra íródott alkalmazások) az Intel Core i5 és i7 processzorok kissé erősnek tűnnek , ezek mellé ráadásul 8-16 GB RAM és legfeljebb 512 GB-os SSD kerülhet. A gép méretéhez és felszereltségéhez képest az akkumulátoros üzemidő is elfogadható, a Google szerint maximum 10 óra. A töltés USB Type-C porton keresztül történik és van gyorstöltés is, ekkor 15 perc alatt két órára elegendő energiát lehet belepumpálni.</p>
@@ -49,7 +49,7 @@
             <section>
                 <h2>Bemutató videó(angol nyelven) - 6p 06mp :</h2>
                 <video controls>
-                    <source src="media/book.mp4" type="video/mp4">
+                    <source src="https://balambuc.github.io/media/book.mp4" type="video/mp4">
                     Az ön böngészője nem támogatja a html5 videolejátszást.
                 </video>
             </section>
