--- a/buds.html
+++ b/buds.html
@@ -29,7 +29,7 @@
                 <img src="media/buds1_sm.jpg" alt="Google Pixel Buds fülhallgató" height="200">
                 <figcaption>
                     Google Pixel Buds fülhallgató <br>
-                    <a href="media/buds1.jpg">Nagyobb méretű kép</a>
+                    <a href="https://balambuc.github.io/media/buds1.jpg">Nagyobb méretű kép</a>
                 </figcaption>
             </figure>
             <p>A Google 2017-es hardveres eseményének egyik meglepetése a Bluetooth-os <a href="https://store.google.com/us/product/google_pixel_buds?hl=en-US" target="_blank"> Pixel Buds </a> nevű fülhallgató volt, ami a Google szerint: “felszabadítja a felhasználó kezét”.</p>
@@ -39,7 +39,7 @@
                 <img src="media/buds2_sm.jpg" alt="Google Pixel Buds tokban" height="200">
                 <figcaption>
                     Google Pixel Buds tokban <br>
-                    <a href="media/buds1.jpg">Nagyobb méretű kép</a>
+                    <a href="https://balambuc.github.io/media/buds2.jpg">Nagyobb méretű kép</a>
                 </figcaption>
             </figure>
             <p>A füles jobb felébe épített érintőfelületre tapintva lehet előhívni a Google Assistantot, ami számos feladat elvégzésében segít. Parancsba adható neki, hogy indítsa/szüneteltesse a zenelejátszást, tervezzen útvonalat és navigáljon, vagy indítson el egy hívást. Kézmozdulatokkal pedig olyan alapvető funkciókat végezhetünk el, mint egy dal szüneteltetése, a hangerő szabályzása, vagy hívásokra való válaszolás.</p>
@@ -49,7 +49,7 @@
             <section>
                 <h2>Bemutató videó(angol nyelven) - 3p 42mp :</h2>
                 <video controls>
-                    <source src="media/buds.mp4" type="video/mp4">
+                    <source src="https://balambuc.github.io/media/buds.mp4" type="video/mp4">
                     Az ön böngészője nem támogatja a html5 videolejátszást.
                 </video>
             </section>
